# src/app/api-svc/model/cartItemRequest.ts
@@ -14,6 +14,5 @@
 export interface CartItemRequest { 
     productId?: number;
     quantity?: number;
-    shoppingSessionId?: number;
 }
 
