# src/app/api-svc/model/loginRequest.ts
@@ -14,6 +14,5 @@
 export interface LoginRequest { 
     username?: string;
     password?: string;
-    shoppingSessionId?: number;
 }
 
