# src/app/api-svc/model/pageCategory.ts
@@ -21,9 +21,9 @@ export interface PageCategory {
     content?: Array<Category>;
     number?: number;
     sort?: Sort;
-    pageable?: PageableObject;
     first?: boolean;
     last?: boolean;
+    pageable?: PageableObject;
     numberOfElements?: number;
     empty?: boolean;
 }
