# src/app/api-svc/model/pageComment.ts
@@ -21,9 +21,9 @@ export interface PageComment {
     content?: Array<Comment>;
     number?: number;
     sort?: Sort;
-    pageable?: PageableObject;
     first?: boolean;
     last?: boolean;
+    pageable?: PageableObject;
     numberOfElements?: number;
     empty?: boolean;
 }
