# src/app/api-svc/model/pageProduct.ts
@@ -21,9 +21,9 @@ export interface PageProduct {
     content?: Array<Product>;
     number?: number;
     sort?: Sort;
-    pageable?: PageableObject;
     first?: boolean;
     last?: boolean;
+    pageable?: PageableObject;
     numberOfElements?: number;
     empty?: boolean;
 }
