# src/app/api-svc/model/pageRole.ts
@@ -21,9 +21,9 @@ export interface PageRole {
     content?: Array<Role>;
     number?: number;
     sort?: Sort;
-    pageable?: PageableObject;
     first?: boolean;
     last?: boolean;
+    pageable?: PageableObject;
     numberOfElements?: number;
     empty?: boolean;
 }
