# src/app/api-svc/model/pageSlider.ts
@@ -21,9 +21,9 @@ export interface PageSlider {
     content?: Array<Slider>;
     number?: number;
     sort?: Sort;
-    pageable?: PageableObject;
     first?: boolean;
     last?: boolean;
+    pageable?: PageableObject;
     numberOfElements?: number;
     empty?: boolean;
 }
